@@ -158,7 +158,6 @@ extern int ntfs_read_compressed_block(struct page *page);
 #define default_upcase_len 0x10000
 extern wchar_t *default_upcase;
 extern unsigned long ntfs_nr_upcase_users;
-extern unsigned long ntfs_nr_mounts;
 extern struct semaphore ntfs_lock;
 
 typedef struct {
